Fix the alignment

--- a/src/sass/components/search.scss
+++ b/src/sass/components/search.scss
@@ -1,3 +1,9 @@
 .searchresults__list {
+	margin-top: 3rem;
 	margin-bottom: 5rem;
+}
+
+ul.searchresults__ul {
+	margin-left: -2.2rem;
+	margin-top: 2rem;
 }
